--- a/estilos/estilo.css
+++ b/estilos/estilo.css
@@ -320,6 +320,24 @@ svg {
 
 @media screen and (max-width: 500px) {
 
+    .contenedorIndex {
+        width: 90%;
+        margin: 10px auto;
+        display: grid;
+        grid-gap: 10px;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(8, auto);
+        grid-template-areas: "header                  header"
+            "nav                    nav"
+            "contenidoPrincipal     contenidoPrincipal"
+            "tamanioPlanetas      tamanioPlanetas"
+            "nasa      nasa"
+            "curiosidades           curiosidades"
+            "banner                 banner"
+            "footer                 footer";
+    
+    }
+
     .contenedorIndex .nav {
    
         background: linear-gradient(90deg, rgba(0, 0, 0, 0) 0%, rgba(255, 255, 255, 0.25) 50%, rgba(0, 0, 0, 0) 100%);
